tests/baselines/reference/parserES5ForOfStatement10(target=es2015).errors.txt
parserES5ForOfStatement10.ts(1,17): error TS2304: Cannot find name 'X'.


==== parserES5ForOfStatement10.ts (1 errors) ====
    for (const v of X) {
                    ~
!!! error TS2304: Cannot find name 'X'.
    }